# perceptron_breast_cancer

./: .env  README.md  pyproject.toml
notebook/: breast_cancer.ipynb
