[tool.poetry]
name = "breast-cancer"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <guizmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
kaggle = "^1.6.12"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
